--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "facilideal",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://facilodeal.com/",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^21.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
@@ -15,6 +16,7 @@
     "dexie": "^3.0.2",
     "html-entities": "^1.3.1",
     "html-react-parser": "^0.13.0",
+    "lws-react-client": "^1.0.0-beta.27",
     "moment": "^2.27.0",
     "moment-hooks": "^1.1.0",
     "pure-react-carousel": "^1.27.1",
