--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-router-dom": "^5.1.2",
     "react-router-transition": "^2.0.0",
     "react-scripts": "3.4.1",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "reactjs-captcha": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
