--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dexie": "^3.0.2",
     "html-entities": "^1.3.1",
     "html-react-parser": "^0.13.0",
+    "jquery": "^3.5.1",
     "lws-react-client": "^1.0.0-beta.27",
     "moment": "^2.27.0",
     "moment-hooks": "^1.1.0",
@@ -33,8 +34,10 @@
     "react-router-dom": "^5.1.2",
     "react-router-transition": "^2.0.0",
     "react-scripts": "3.4.1",
+    "react-slidedown": "^2.4.5",
     "react-transition-group": "^4.4.1",
-    "reactjs-captcha": "^1.3.1"
+    "reactjs-captcha": "^1.3.1",
+    "universal-cookie": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
