--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.21",
+    "react-iframe": "^1.8.0",
     "react-messenger-customer-chat": "^0.8.0",
     "react-meta-tags": "^0.7.4",
     "react-moment": "^0.9.7",
