--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,3 +6,5 @@ RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.html [QSA,L]
+
+Header set Access-Control-Allow-Origin "*"
