--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pure-react-carousel": "^1.27.1",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
+    "react-dark-theme": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.21",
@@ -38,6 +39,7 @@
     "react-slidedown": "^2.4.5",
     "react-transition-group": "^4.4.1",
     "reactjs-captcha": "^1.3.1",
+    "serve": "^11.3.2",
     "universal-cookie": "^4.0.3"
   },
   "scripts": {
